# aletheia-orchestrator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aletheia_orchestrator/: graph.py  main.py  state.py
src/aletheia_orchestrator/nodes/: critic.py  generator.py
tests/: test_state.py
